--- a/src/main/resources/com/example/csc325/csc325/employeeProfile.fxml
+++ b/src/main/resources/com/example/csc325/csc325/employeeProfile.fxml
@@ -12,7 +12,7 @@
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="724" prefWidth="708" style="-fx-background-color: white; -fx-padding: 20;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csc325.csc325.Controllers.employeeProfileController">
+<AnchorPane layoutX="10.0" layoutY="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="722.0" prefWidth="718.0" style="-fx-background-color: white; -fx-padding: 20;" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.csc325.csc325.Controllers.employeeProfileController">
     <children>
         <ImageView fitHeight="86.0" fitWidth="129.0" layoutX="46.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true">
             <clip>
@@ -22,20 +22,20 @@
                 <Image url="@profile.png" />
             </image>
         </ImageView>
-        <TextArea layoutX="8.0" layoutY="251.0" prefHeight="195.0" prefWidth="628.0" promptText="About me" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
-        <ListView fx:id="skillListView" layoutX="8.0" layoutY="411.0" prefHeight="161.0" prefWidth="696.0" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
-        <Label fx:id="employeeName" alignment="CENTER" contentDisplay="CENTER" layoutX="45.0" layoutY="41.0" prefHeight="105.0" prefWidth="644.0" textFill="#949090">
+        <TextArea layoutX="41.0" layoutY="246.0" prefHeight="108.0" prefWidth="628.0" promptText="About me" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
+        <ListView fx:id="skillListView" layoutX="26.0" layoutY="393.0" prefHeight="179.0" prefWidth="671.0" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
+        <Label fx:id="employeeName" alignment="CENTER" contentDisplay="CENTER" layoutX="36.0" layoutY="33.0" prefHeight="105.0" prefWidth="644.0" textFill="#949090">
             <font>
                 <Font size="36.0" />
             </font>
         </Label>
-        <Label fx:id="username" layoutX="74.0" layoutY="186.0" prefHeight="28.0" prefWidth="188.0" text="Email" textFill="#949090" />
-        <Label fx:id="phoneNumber" layoutX="338.0" layoutY="186.0" prefHeight="28.0" prefWidth="188.0" text="Phone Number" textFill="#949090" />
+        <Label fx:id="username" layoutX="51.0" layoutY="180.0" prefHeight="28.0" prefWidth="188.0" text="Email" textFill="#949090" />
+        <Label fx:id="phoneNumber" layoutX="341.0" layoutY="182.0" prefHeight="28.0" prefWidth="188.0" text="Phone Number" textFill="#949090" />
         <Label fx:id="lblErrorMsg" layoutX="46.0" layoutY="669.0" textFill="#eb0f0f" />
-      <Button fx:id="saveButton" layoutX="641.0" layoutY="663.0" mnemonicParsing="false" onAction="#saveProfile" text="Save" />
+      <Button fx:id="saveButton" layoutX="611.0" layoutY="645.0" mnemonicParsing="false" onAction="#saveProfile" text="Save" />
       <Button fx:id="addSkill" layoutX="32.0" layoutY="650.0" mnemonicParsing="false" onAction="#addSkilltoList" text="Add" />
-      <Button layoutX="168.0" layoutY="651.0" mnemonicParsing="false" onAction="#removeSkillfromList" text="Remove" />
-        <TextField fx:id="skill" promptText="Add Skill" />
+      <Button layoutX="116.0" layoutY="651.0" mnemonicParsing="false" onAction="#removeSkillfromList" text="Remove" />
+        <TextField fx:id="skill" layoutX="31.0" layoutY="589.0" promptText="Add Skill" />
     </children>
     <stylesheets>
         <URL value="@style.css" />
