--- a/src/main/resources/com/example/csc325/csc325/employerProfile.fxml
+++ b/src/main/resources/com/example/csc325/csc325/employerProfile.fxml
@@ -26,8 +26,8 @@
             </image>
         </ImageView>
         <TextArea layoutX="8.0" layoutY="251.0" prefHeight="195.0" prefWidth="628.0" promptText="About me" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
-        <ListView fx:id="skillListView" layoutX="8.0" layoutY="411.0" prefHeight="161.0" prefWidth="696.0" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
-        <Label fx:id="employeeName" alignment="CENTER" contentDisplay="CENTER" layoutX="45.0" layoutY="41.0" prefHeight="105.0" prefWidth="644.0" textFill="#949090">
+        <ListView fx:id="ListingListView" layoutX="8.0" layoutY="411.0" prefHeight="161.0" prefWidth="696.0" style="-fx-border-color: white; -fx-border-width: 1; -fx-background-color: transparent;" />
+        <Label fx:id="companyName" alignment="CENTER" contentDisplay="CENTER" layoutX="45.0" layoutY="41.0" prefHeight="105.0" prefWidth="644.0" textFill="#949090">
             <font>
                 <Font size="36.0" />
             </font>
